--- a/style.css
+++ b/style.css
@@ -3,34 +3,61 @@ body {
   font-family: 'Lato', sans-serif;
   color: #242526;
   background-color: rgba(255, 255, 235, 0.76);
+  padding: 5px 10px;
+  margin: 0 auto;
+  max-width: 90%;
+}
+
+.background-info {
+  background-color: rgba(129, 203, 216, 0.74);
+  padding: 10px 15px;
+  border-radius: 15px;
+  line-height: 1.5;
+  box-shadow: 0 0 5px hsla(0,0%,20%,0.75);
+  text-align: justify;
+}
+
+h1, h3, h4 {
+  margin: 5px auto;
+}
+
+ul {
+  list-style: none;
 }
 
 #options {
   margin: auto;
-  width: 50%;
+  width: 75%;
 }
 
 .button {
+  font-family: 'Lato', sans-serif;
   display: inline-block;
   font-size: 1.25em;
   background-color: mediumaquamarine;
-  border: 2px solid #a1a1a1;
+  border: 2px solid #606361;
   padding: 10px 10px;
-  margin: 20px 50px 10px 50px;
-  width: 200px;
-  border-radius: 25px
+  margin: 5px 40px;
+  width: 40%;
+  border-radius: 15px
 }
 
 .button:hover {
-  background-color: #ddd;
+  background-color: rgba(243, 243, 243, 0.85);
 }
 
 #response {
-  font-size: 1.5em;
-  margin: auto;
+  font-size: 1.25em;
+  margin: 10px auto;
   text-align: center;
   color: #fff;
   background-color: #000;
-  padding: 20px;
-  width: 1000px;
+  padding: 15px;
+  width: 75%;
+  border-radius: 15px
+}
+
+img {
+  vertical-align: middle;
+  padding: 5px 10px;
 }
